Fix sketchy column if too much text

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -68,6 +68,7 @@ html,body {
 .col {
   flex: 50%;
   padding: 2px;
+  min-width: 200px;
 }
 
 .footer {
